# rusty_ems

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  run.sh
docs/: dokumentacja.md  erd.vpp  rusty_ems.dbm  rusty_ems.sql  rusty_ems2.dbm
migrations/20170529191530_base/: check.sql  down.sql  up.sql
migrations/20170529191530_create_person/: down.sql  up.sql
migrations/20170529191530_create_users/: up.sql
migrations/20170530095357_create_event/: up.sql
src/: api.rs  database.rs  main.rs  models.rs  router.rs  routes.rs  schema.rs
tests/: examples.json
