[package]
name = "rusty_ems"
version = "0.1.0"
authors = ["Kamil Markiewicz <k.a.markiewicz@gmail.com>"]

[dependencies]
chrono = { version = "0.3", features = ["serde"] }
error-chain = "0.10.0"
serde = "1.0.6"
serde_derive = "1.0.6"
serde_json = "1.0.2"
diesel = { version = "0.13.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
